use 1.8 compliant IOUtils